#-----------------------------------------------------------------------
# Footstep Planner Executor Service Node:
# for planning and executing footsteps
#-----------------------------------------------------------------------
install(PROGRAMS footstep_planner_executor_server_node.py
        DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
